# Speakeasy

./: .gitignore  E2E_SCREENSHOT_SYSTEM.md  README.md  SCREENSHOT_SYSTEM_FIXED.md  install.bat  install.sh  opencode.json  pyproject.toml  reinstall_backend.bat  reinstall_backend.sh  start.bat  start.sh
.github/workflows/: python-publish.yml  test.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/03.2-remove-background/: 03.2-01-PLAN.md
.planning/phases/03.4-fix-batch-transcription/: 03.4-CONTEXT.md  03.4-RESEARCH.md
.planning/phases/03.5-stabilize-batch-transcription/: 03.5-01-SUMMARY.md  03.5-CONTEXT.md  03.5-RESEARCH.md  03.5-VERIFICATION.md
.planning/phases/03.6-fix-windows-file-locking/: 03.6-VERIFICATION.md
backend/: README.md  pyproject.toml
backend/speakeasy/: __main__.py  server.py
backend/speakeasy/core/: grammar_processor.py  models.py  transcriber.py
backend/speakeasy/services/: batch.py  download_state.py  history.py  settings.py
backend/speakeasy/utils/: paste.py
backend/tests/: conftest.py  test_transcriber.py  test_validation.py
gui/: .eslintrc.cjs  .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.web.tsbuildinfo  vitest.config.ts
gui/e2e/: app-launch.spec.ts  global-setup.ts  global-teardown.ts  settings.spec.ts  transcription.spec.ts
gui/e2e/fixtures/: electron-app.ts
gui/src/main/: backend.ts  hotkey.ts  index.ts  ipc-handlers.ts  overlay-positioner.ts  tray.ts  windows.ts
gui/src/preload/: index.ts
gui/src/renderer/: index.html
gui/src/renderer/src/: App.tsx
gui/src/renderer/src/api/: cache.ts  client.ts  types.ts  websocket.ts
gui/src/renderer/src/api/__tests__/: cache.test.ts
gui/src/renderer/src/components/: DeviceSelector.tsx  ErrorBoundary.tsx  ExportDialog.tsx  HistoryItem.tsx  HistoryItemSkeleton.tsx  HotkeyInput.tsx  LoadingSpinner.tsx  ModelDownloadDialog.tsx  ModelSelector.tsx  Pagination.tsx  RecordingIndicator.tsx  SaveStatusIndicator.tsx  Sidebar.tsx  Toast.tsx
gui/src/renderer/src/components/Overlay/: IdlePill.tsx  OverlayContainer.tsx  RecordingPill.tsx  TranscribingLine.tsx
gui/src/renderer/src/components/__tests__/: ModelSelector.test.tsx  RecordingIndicator.test.tsx
gui/src/renderer/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  icon.tsx  input.tsx  label.tsx
gui/src/renderer/src/pages/: BatchTranscription.tsx  ComponentTest.tsx  Dashboard.tsx  Settings.tsx  Stats.tsx
gui/src/renderer/src/pages/settings/: AboutSettings.tsx  AppearanceSettings.tsx  AudioSettings.tsx  BehaviorSettings.tsx  DataSettings.tsx  HotkeySettings.tsx  ModelSettings.tsx  index.ts
gui/src/renderer/src/store/: history-store.ts  index.ts
gui/src/renderer/src/styles/: globals.css  themes.css  tokens.css
gui/src/renderer/src/test/: setup.ts  utils.tsx
scripts/: test_batch_failure.py  test_reload.py
src/: README.md
src/faster_whisper_hotkey/: __init__.py  __main__.py  available_models_languages.json  clipboard.py  config.py  models.py  paste.py  settings.py  terminal.py  transcribe.py  transcriber.py  ui.py
tests/: test_batch_recovery.py
