[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faster-whisper-hotkey"
version = "0.2.2"
description = "Push-to-talk transcription using faster-whisper"
readme = "README.md"
authors = [
    {name = "blakkd"}
]
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["keyboard", "recognition", "voice", "typing", "speech", "shortcut", "speech-recognition", "hotkey", "speech-to-text", "transcription", "stt", "asr", "faster-whisper", "whisper", "parakeet", "canary"]
dependencies = [
    "sounddevice",
    "numpy",
    "faster-whisper",
    "pynput",
    "pulsectl",
    "torch",
    "nemo_toolkit[asr]",
    "requests==2.32.3",
    "importlib_resources",
    "cuda-python>=12.3"
]

[project.urls]
"Homepage" = "https://github.com/blakkd/faster-whisper-hotkey"
"Bug Tracker" = "https://github.com/blakkd/faster-whisper-hotkey/issues"

[project.scripts]
faster-whisper-hotkey = "faster_whisper_hotkey.__main__:main"

[tool.setuptools]
packages = ["faster_whisper_hotkey"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
faster_whisper_hotkey = ["*.json"]